...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LoginController" customModule="GitHubRepositories" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GitHubRepositories" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hzw-lO-yJC">
                                <rect key="frame" x="20" y="63" width="374" height="131"/>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="NO"/>
                                </userDefinedRuntimeAttributes>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter your username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0lg-Ow-Rp4">
                                <rect key="frame" x="20" y="264" width="374" height="59"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="59" id="sEK-QT-IsW"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <textInputTraits key="textInputTraits"/>
...
                                <color key="backgroundColor" systemColor="linkColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="41" id="H32-06-KdS"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Sign In">
                                    <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="25"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="8"/>
                                    </userDefinedRuntimeAttribute>
...
                                    <outlet property="delegate" destination="rfZ-RM-DTO" id="hUY-Sa-e0U"/>
                                </connections>
                            </tableView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ugx-zD-hL9">
                                <rect key="frame" x="0.0" y="88" width="414" height="63"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last refreshed: a moment ago" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2KA-7m-nHl">
                                        <rect key="frame" x="15" y="15.5" width="295" height="32"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="295" id="K4f-1k-8xU"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
