...
    
    @IBOutlet weak var tableView: UITableView!
    
    private var viewModel: DashboardViewModel!
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Dashboard"
        viewModel = DashboardViewModel(vc: self)
        viewModel.getUserRepositories()
    }
    
    @IBAction func didTapRefresh(_ sender: Any) {
        viewModel.getUserRepositories()
...
